# kyopro

./: .dir-locals.el  .gitignore  ChangeLog.md  README.md  build.sh  cabal.project  check.sh  ghcenv.sh  hie.yaml  init.bash  init.sh  kyopro.cabal  package.yaml  push.sh  setup.sh  submit.sh  template.hs  template.hs.1
atcoder.jp/contests/abc104/tasks/abc104_c/: Main.hs
atcoder.jp/contests/abc128/tasks/abc128_d/: Main.hs
atcoder.jp/contests/abc167/tasks/abc167_d/: Main.hs
atcoder.jp/contests/abc169/tasks/abc169_a/: Main.hs
atcoder.jp/contests/abc174/tasks/abc174_c/: Main.hs
atcoder.jp/contests/abc175/tasks/abc175_a/: Main.hs
atcoder.jp/contests/abc175/tasks/abc175_b/: Main.hs
atcoder.jp/contests/abc175/tasks/abc175_c/: Main.hs
atcoder.jp/contests/abc176/tasks/abc176_b/: Main.hs
atcoder.jp/contests/abc176/tasks/abc176_c/: Main.hs
atcoder.jp/contests/abc176/tasks/abc176_d/: Main.hs
atcoder.jp/contests/abc177/tasks/abc177_b/: Main.hs
atcoder.jp/contests/abc178/tasks/abc178_a/: Main.hs
atcoder.jp/contests/abc178/tasks/abc178_b/: Main.hs
atcoder.jp/contests/abc234/tasks/abc234_d/: Main.hs
atcoder.jp/contests/abc238/tasks/abc238_c/: Main.hs
atcoder.jp/contests/abc247/tasks/abc247_b/: Main.hs
atcoder.jp/contests/abc247/tasks/abc247_d/: Main.hs
atcoder.jp/contests/abc263/tasks/abc263_d/: Main.hs
atcoder.jp/contests/abc292/tasks/abc292_a/: Main.hs
atcoder.jp/contests/abc292/tasks/abc292_c/: Main.hs
atcoder.jp/contests/arc051/tasks/arc051_a/: Main.hs
atcoder.jp/contests/arc068/tasks/arc068_a/: Main.hs
atcoder.jp/contests/arc137/tasks/arc137_a/: Main.hs
atcoder.jp/contests/atc001/tasks/dfs_a/: Main.hs
atcoder.jp/contests/dp/tasks/dp_b_1/: Main.hs
atcoder.jp/contests/dp/tasks/dp_c_1/: Main.hs
atcoder_abc/045/c2/: Main.hs
atcoder_abc/048/c/: Main.hs
atcoder_abc/049/c/: Main.hs
atcoder_abc/120/d/: Main.hs
atcoder_abc/127/c/: Main.hs
atcoder_abc/138/c/: Main.hs
atcoder_abc/138/d/: Main.hs
atcoder_abc/155/d/: Main.hs
atcoder_abc/165/c/: Main.hs
atcoder_abc/165/d/: Main.hs
atcoder_abc/169/b/: Main.hs
atcoder_abc/174/b/: Main.hs
atcoder_abc/176/a/: Main.hs
atcoder_abc/177/d/: Main.hs
atcoder_abc/178/d/: Main.hs
atcoder_abc/179/c/: Main.hs
atcoder_abc/237/d/: Main.hs
atcoder_other/edpc/a_1/: Main.hs
atcoder_other/edpc/g/: Main.hs
atcoder_other/m-solutions-procon/a/: Main.hs
atcoder_other/typical-contest/002/a/: Main.hs
bundler/: Main.hs
experiments/: difflist.hs  sequence.hs
experiments/My/Algorithm/: PrefixSum.hs
experiments/My/Data/: Heap.hs  IntBag.hs
lib/My/: BinSearch.hs  ExtGcd.hs  Graph.hs  Grid.hs  IntMod.hs  Prime.hs  Queue.hs
lib/My/Algorithm/: BinSearch.hs
lib/My/Data/: Graph.hs  IntMod.hs  Prime.hs
src/: template.hs
src/My/: BinSearch.hs  Conv.hs  DPImpl.hs  Debug.hs  HeapImpl.hs  IO.hs  Launcher.hs  Misc.hs  Output.hs  Parser.hs  Runtime.hs
src/My/Algorithm/: BFS.hs  BinarySearch.hs  DFS.hs  DP.hs  Dijkstra.hs  Graph.hs
src/My/Algorithm/Sample/: BFS.hs  Dijkstra.hs  Graph.hs
src/My/Conv/: Graph.hs  Grid.hs
src/My/Data/: Array.hs  Bag.hs  Graph.hs  Grid.hs  IntBag.hs  Queue.hs  Rational.hs  Ref.hs  SegTree.hs  UnionFind.hs  Vector.hs
src/My/Math/: Geometry.hs  IntMod.hs  Prime.hs  Rational.hs  Util.hs
src/My/Test/: QuickCheck.hs
src/atcoder.jp/contests/abc070/tasks/abc070_d/: Main.hs
src/atcoder.jp/contests/abc099/tasks/abc099_c/: Main.hs
src/atcoder.jp/contests/abc119/tasks/abc119_d/: Main.hs
src/atcoder.jp/contests/abc122/tasks/abc122_d/: Main.hs
src/atcoder.jp/contests/abc127/tasks/abc127_a/: Main.hs
src/atcoder.jp/contests/abc127/tasks/abc127_b/: Main.hs
src/atcoder.jp/contests/abc146/tasks/abc146_c/: Main.hs
src/atcoder.jp/contests/abc150/tasks/abc150_c/: Main.hs
src/atcoder.jp/contests/abc154/tasks/abc154_e/: Main.hs
src/atcoder.jp/contests/abc161/tasks/abc161_d/: Main.hs
src/atcoder.jp/contests/abc162/tasks/abc162_d/: Main.hs
src/atcoder.jp/contests/abc164/tasks/abc164_b/: Main.hs
src/atcoder.jp/contests/abc169/tasks/abc169_c/: Main.hs
src/atcoder.jp/contests/abc169/tasks/abc169_d/: Main.hs
src/atcoder.jp/contests/abc174/tasks/abc174_a/: Main.hs
src/atcoder.jp/contests/abc174/tasks/abc174_d/: Main.hs
src/atcoder.jp/contests/abc177/tasks/abc177_a/: Main.hs
src/atcoder.jp/contests/abc177/tasks/abc177_c/: Main.hs
src/atcoder.jp/contests/abc177/tasks/abc177_e/: Main.hs
src/atcoder.jp/contests/abc178/tasks/abc178_c/: Main.hs
src/atcoder.jp/contests/abc179/tasks/abc179_a/: Main.hs
src/atcoder.jp/contests/abc179/tasks/abc179_b/: Main.hs
src/atcoder.jp/contests/abc179/tasks/abc179_c/: Main.hs
src/atcoder.jp/contests/abc216/tasks/abc216_c/: Main.hs
src/atcoder.jp/contests/abc229/tasks/abc229_d/: Main.hs
src/atcoder.jp/contests/abc233/tasks/abc233_c/: Main.hs
src/atcoder.jp/contests/abc233/tasks/abc233_d/: Main.hs
src/atcoder.jp/contests/abc237/tasks/abc237_a/: Main.hs
src/atcoder.jp/contests/abc237/tasks/abc237_d/: Main.hs
src/atcoder.jp/contests/abc242/tasks/abc242_a/: Main.hs
src/atcoder.jp/contests/abc245/tasks/abc245_c/: Main.hs
src/atcoder.jp/contests/abc247/tasks/abc247_a/: Main.hs
src/atcoder.jp/contests/abc247/tasks/abc247_c/: Main.hs
src/atcoder.jp/contests/abc252/tasks/abc252_a/: Main.hs
src/atcoder.jp/contests/abc252/tasks/abc252_b/: Main.hs
src/atcoder.jp/contests/abc252/tasks/abc252_c/: Main.hs
src/atcoder.jp/contests/abc252/tasks/abc252_d/: Main.hs
src/atcoder.jp/contests/abc263/tasks/abc263_c/: Main.hs
src/atcoder.jp/contests/abc263/tasks/abc263_d/: Main.hs
src/atcoder.jp/contests/abc263/tasks/abc263_e/: Main.hs
src/atcoder.jp/contests/abc292/tasks/abc292_b/: Main.hs
src/atcoder.jp/contests/abc306/tasks/abc306_a/: Main.hs
src/atcoder.jp/contests/abc306/tasks/abc306_b/: Main.hs
src/atcoder.jp/contests/abc306/tasks/abc306_c/: Main.hs
src/atcoder.jp/contests/abc306/tasks/abc306_d/: Main.hs
src/atcoder.jp/contests/abc306/tasks/abc306_e/: Main.hs
src/atcoder.jp/contests/abc307/tasks/abc307_a/: Main.hs
src/atcoder.jp/contests/abc307/tasks/abc307_b/: Main.hs
(+94 files in other folders)
